--- a/app/src/main/res/layout/fragment_community_main.xml
+++ b/app/src/main/res/layout/fragment_community_main.xml
@@ -19,11 +19,7 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-     >
-
-
-
+        >
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -135,7 +131,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/main_grid_rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="#fff"
                 app:layout_constraintTop_toBottomOf="@id/view_cate"
                 app:layout_constraintStart_toStartOf="parent"
