--- a/app/src/main/res/layout/activity_community_main.xml
+++ b/app/src/main/res/layout/activity_community_main.xml
@@ -16,6 +16,8 @@
             android:id="@+id/layout_bottom_tab"
             layout="@layout/item_bottom_layout"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_height="40dp"
             android:layout_width="match_parent"
             />
@@ -25,6 +27,7 @@
             android:id="@+id/frame_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
             android:layout_above="@+id/layout_bottom_tab"
             >
 
