--- a/app/src/main/res/layout/activity_review_main.xml
+++ b/app/src/main/res/layout/activity_review_main.xml
@@ -16,9 +16,11 @@
         <include
             android:id="@+id/layout_bottom_tab"
             layout="@layout/item_bottom_layout"
-            android:layout_alignParentBottom="true"
             android:layout_height="40dp"
             android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             />
 
         <FrameLayout
