--- a/app/src/main/res/layout/activity_setting_main.xml
+++ b/app/src/main/res/layout/activity_setting_main.xml
@@ -15,6 +15,8 @@
             android:id="@+id/layout_bottom_tab"
             layout="@layout/item_bottom_layout"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_height="40dp"
             android:layout_width="match_parent"
             />
