--- a/app/src/main/res/layout/item_bottom_layout.xml
+++ b/app/src/main/res/layout/item_bottom_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
@@ -20,6 +21,7 @@
         android:layout_height="50dp"
         android:background="#f4f4f4"
         app:keyboardDetect="@{empty}"
+
         >
 
 
