--- a/app/src/main/res/layout/activity_community_question.xml
+++ b/app/src/main/res/layout/activity_community_question.xml
@@ -76,15 +76,68 @@
             app:layout_constraintTop_toBottomOf="@id/question_text_title"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            app:layout_constraintBottom_toTopOf="@id/question_add_img"
+            app:layout_constraintBottom_toTopOf="@id/question_img1"
             >
         </EditText>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/survey_divder"
+            app:layout_goneMarginTop="2.5dp"
+            app:layout_constraintTop_toBottomOf="@id/question_txt_question"
+            app:layout_constraintBottom_toTopOf="@id/question_img1"
+            android:layout_marginBottom="2.5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/question_img1"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toTopOf="@id/question_add_img"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/question_img2"
+            app:layout_constraintTop_toBottomOf="@id/question_txt_question"
+
+            />
+        <ImageView
+            android:id="@+id/question_img2"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toEndOf="@id/question_img1"
+            app:layout_constraintEnd_toStartOf="@id/question_img3"
+            app:layout_constraintTop_toBottomOf="@id/question_txt_question"
+
+
+            />
+        <ImageView
+            android:layout_marginTop="10dp"
+            android:id="@+id/question_img3"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
+            app:layout_constraintStart_toEndOf="@id/question_img2"
+            app:layout_constraintEnd_toStartOf="@id/question_img4"
+            app:layout_constraintTop_toBottomOf="@id/question_txt_question"
+            />
+        <ImageView
+            android:layout_marginTop="10dp"
+            android:id="@+id/question_img4"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
+            app:layout_constraintStart_toEndOf="@id/question_img3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/question_txt_question"
+            />
 
 
         <TextView
             android:id="@+id/question_add_img"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_marginTop="15dp"
             android:gravity="center"
             android:text="이미지 추가"
@@ -94,7 +147,7 @@
             app:layout_constraintEnd_toStartOf="@id/question_img"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintTop_toBottomOf="@id/question_txt_question"
+            app:layout_constraintTop_toBottomOf="@id/question_img1"
             app:layout_constraintBottom_toTopOf="@id/question_btn_register"
 
 
@@ -103,7 +156,7 @@
         <ImageView
             android:id="@+id/question_img"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toTopOf="@id/question_btn_register"
@@ -115,7 +168,7 @@
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/question_add_img"
-            app:layout_constraintTop_toBottomOf="@id/question_txt_question"
+            app:layout_constraintTop_toBottomOf="@id/question_img1"
 
 
 
