--- a/app/src/main/res/layout/fragment_community_main.xml
+++ b/app/src/main/res/layout/fragment_community_main.xml
@@ -30,7 +30,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/main_search_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="80dp"
                 app:contentInsetEnd="0dp"
                 app:contentInsetLeft="0dp"
                 app:contentInsetRight="0dp"
@@ -49,29 +49,32 @@
                     >
 
                     <TextView
-                        android:id="@+id/main_search_txt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="25dp"
+                        android:id="@+id/community_search_reviewtitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:text="ReviewMe"
+                        android:gravity="center"
                         android:textColor="#000"
-                        android:text="검색"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        android:textSize="15sp"
                         app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         />
 
                     <EditText
                         android:id="@+id/main_search_edit"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="25dp"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginBottom="10dp"
                         android:textColor="#000"
                         android:textColorHint="#000"
                         android:paddingStart="5dp"
                         android:paddingEnd="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/community_btn_cat"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/main_search_txt"
-                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/community_search_reviewtitle"
                         android:inputType="text"
                         android:background="@drawable/btn_grey_border"
                         tools:ignore="LabelFor"
@@ -82,14 +85,15 @@
                         android:background="@android:color/transparent"
                         android:text="등록"
                         android:textColor="#000"
+                        android:textSize="13sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/community_btn_cat"
                         android:onClick="@{onClickListener::onClick}"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/community_search_reviewtitle"
                         app:layout_constraintEnd_toEndOf="parent"
-
+                        android:layout_marginBottom="10dp"
                         />
 
                 </android.support.constraint.ConstraintLayout>
@@ -131,11 +135,12 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/main_grid_rv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:background="#fff"
                 app:layout_constraintTop_toBottomOf="@id/view_cate"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 tools:listitem="@layout/item_community_main"
                 />
 
