--- a/app/src/main/res/layout/fragment_review_main.xml
+++ b/app/src/main/res/layout/fragment_review_main.xml
@@ -34,7 +34,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/main_search_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="80dp"
                 app:contentInsetEnd="0dp"
                 app:contentInsetLeft="0dp"
                 app:contentInsetRight="0dp"
@@ -53,30 +53,53 @@
                     >
 
                     <TextView
-                        android:id="@+id/main_search_txt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="25dp"
+                        android:id="@+id/main_search_reviewtitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:text="ReviewMe"
+                        android:gravity="center"
                         android:textColor="#000"
-                        android:text="검색"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        android:textSize="15sp"
                         app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         />
 
                     <EditText
                         android:id="@+id/main_search_edit"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="25dp"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+
+                        android:layout_marginBottom="10dp"
                         android:textColor="#000"
                         android:textColorHint="#000"
-                        android:background="@drawable/btn_grey_border"
                         android:paddingStart="5dp"
                         android:paddingEnd="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/main_search_txt"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/main_search_txt"
-                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/main_search_reviewtitle"
+                        android:inputType="text"
+                        android:background="@drawable/btn_grey_border"
+                        tools:ignore="LabelFor"
+                        />
+
+                    <TextView
+                        android:id="@+id/main_search_txt"
+                        android:layout_width="50dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@id/main_search_edit"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/main_search_reviewtitle"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:gravity="center"
+                        android:textColor="#000"
+                        android:textSize="13sp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="검색"
                         />
 
                 </android.support.constraint.ConstraintLayout>
