--- a/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/src/main/res/layout/fragment_setting_main.xml
@@ -22,10 +22,53 @@
         android:background="#fff"
         >
 
+        <ImageView
+            android:id="@+id/setting_img"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+            tools:src="@drawable/ic_launcher_background"
+
+            />
+
+        <TextView
+            android:id="@+id/setting_name_txt"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="60dp"
+            app:layout_constraintStart_toEndOf="@id/setting_img"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="#000"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            tools:text="SEOGKI HONG"
+            android:layout_marginStart="20dp"
+            />
+        <TextView
+            android:id="@+id/setting_email_txt"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="20dp"
+            android:textSize="13sp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            app:layout_constraintStart_toEndOf="@id/setting_img"
+            app:layout_constraintTop_toBottomOf="@id/setting_name_txt"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="#000"
+            tools:text="seogkihong333@gmail.com"
+            />
+
 
         <Button
             android:id="@+id/setting_btn_out"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="로그아웃"
             android:textColor="#fff"
@@ -35,6 +78,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="50dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             />
 
 
