리뷰하는 창 제일 상단으로 가게 변경, retrofit2 기본 설정

--- a/app/src/main/res/layout/item_navi_question.xml
+++ b/app/src/main/res/layout/item_navi_question.xml
@@ -2,6 +2,7 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
     <data>
@@ -62,7 +63,7 @@
             android:background="@drawable/btn_grey_border"
             android:padding="6dp"
             android:onClick="@{onClickListener::onClick}"
-            android:src="@drawable/ic_launcher_background"
+            tools:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/navi_text_title"
