--- a/app/src/main/res/drawable/gradiation_grey.xml
+++ b/app/src/main/res/drawable/gradiation_grey.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <gradient android:startColor="#57F9E2"
-              android:endColor="#50BDB4"
+    <gradient android:startColor="#7F7E85"
+              android:endColor="#f4f4f4"
               android:angle="360" />
     <!--<corners android:radius="3dp" />-->
     <!--<stroke android:width="3dp" android:color="#000" />-->
