--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fff"
+        android:background="@color/grey"
         >
 
         <TextView
@@ -19,13 +19,19 @@
             android:layout_height="50dp"
             android:textColor="#000"
             android:text="회원가입"
-            android:textSize="15sp"
-
+            android:textSize="17sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:gravity="center"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/gradiation_grey"
+            app:layout_constraintTop_toBottomOf="@id/regist_txt_title"
             />
 
 
@@ -33,7 +39,8 @@
         <EditText
             android:id="@+id/regist_edit_nickname"
             android:hint="닉네임"
-            android:background="@drawable/btn_grey_border_grey_inside"
+            android:textColorHint="@color/grey"
+            android:background="@drawable/btn_grey_border"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/regist_txt_title"
@@ -50,9 +57,10 @@
         <EditText
             android:layout_marginTop="20dp"
             android:id="@+id/regist_edit_email"
+            android:textColorHint="@color/grey"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/btn_grey_border_grey_inside"
+            android:background="@drawable/btn_grey_border"
             app:layout_constraintTop_toBottomOf="@id/regist_edit_nickname"
             android:hint="이메일"
             android:paddingEnd="5dp"
@@ -69,12 +77,13 @@
             android:paddingStart="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/btn_grey_border_grey_inside"
+            android:background="@drawable/btn_grey_border"
             app:layout_constraintTop_toBottomOf="@id/regist_edit_email"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
+            android:textColorHint="@color/grey"
             android:layout_height="35dp"
             />
 
@@ -103,7 +112,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:orientation="horizontal"
-            android:background="@drawable/btn_grey_border_grey_inside"
+
             >
 
 
