--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,14 +15,15 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginTop="100dp"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="20sp"
             android:gravity="center"
             android:textColor="#000"
-            android:text="로고"
+            android:text="Review!"
             />
 
 
