--- a/app/src/main/res/layout/fragment_review_main.xml
+++ b/app/src/main/res/layout/fragment_review_main.xml
@@ -17,6 +17,7 @@
 
 
     <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_coordi_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
@@ -58,7 +59,7 @@
                         android:layout_height="45dp"
                         android:text="ReviewMe"
                         android:gravity="center"
-                        android:textColor="#000"
+                        android:textColor="@color/white"
                         android:textSize="18sp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +122,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             >
 
             <Button
