--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,6 +39,7 @@
         <EditText
             android:id="@+id/regist_edit_nickname"
             android:hint="닉네임"
+            android:textColor="@color/black"
             android:textColorHint="@color/grey"
             android:background="@drawable/btn_grey_border"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +58,7 @@
         <EditText
             android:layout_marginTop="20dp"
             android:id="@+id/regist_edit_email"
+            android:textColor="@color/black"
             android:textColorHint="@color/grey"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +76,7 @@
             android:id="@+id/regist_edit_age"
             android:hint="나이"
             android:paddingEnd="5dp"
+            android:textColor="@color/black"
             android:paddingStart="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
