--- a/app/src/main/res/layout/item_review_main.xml
+++ b/app/src/main/res/layout/item_review_main.xml
@@ -2,7 +2,7 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tool="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
 
     >
 
@@ -20,29 +20,65 @@
 
         <variable
             name="model"
-            type="com.skh.reviewme.Main.model.ReviewModel"/>
+            type="com.skh.reviewme.Main.model.ReviewFragmentModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:background="@drawable/view_shadow_btm"
+        tools:ignore="UnusedAttribute"
         >
 
         <TextView
             android:id="@+id/review_main_title"
-            android:layout_marginTop="15dp"
             android:layout_width="0dp"
-            android:layout_height="25dp"
-            android:textSize="15sp"
-            android:text="@{model.titles}"
-            android:gravity="center"
+            android:layout_height="23dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:text="@{model.title}"
             android:textColor="#000"
-            tool:text="텍스트다"
-            android:layout_marginBottom="5dp"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toStartOf="@id/review_main_id_img"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/review_main_text"
+            tools:text="텍스트다"
             />
+
+        <TextView
+            android:id="@+id/review_main_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@{model.text}"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:gravity="center_vertical"
+            android:textSize="10sp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/darkGrey"
+            app:layout_constraintTop_toBottomOf="@id/review_main_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/review_main_id_img"
+            android:layout_marginBottom="15dp"
+            tools:text="테스트 텍스트 ㅇㅇ"
+            />
+
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/review_main_title"
+            android:id="@+id/review_main_id_img"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
 
         <ImageView
             android:id="@+id/main_review_img"
@@ -52,32 +88,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:reviewImageUrl="@{model.images}"
             android:onClick="@{onClickListener::onClick}"
-            app:layout_constraintBottom_toTopOf="@id/review_main_text"
-            app:layout_constraintTop_toBottomOf="@id/review_main_title"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            tool:src="@drawable/ic_launcher_background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/review_main_text"
+
+            android:layout_margin="10dp"
+
+            tools:src="@drawable/test2"
             />
 
-        <TextView
-            android:id="@+id/review_main_text"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:text="@{model.reviews}"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:gravity="center"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:background="@drawable/btn_grey_border"
-            android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="15dp"
-            />
 
     </android.support.constraint.ConstraintLayout>
 
