--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="white">#fff</color>
     <color name="black">#000</color>
     <color name="grey">#f4f4f4</color>
+    <color name="darkGrey">#8D8D8D</color>
     <color name="trans">#8f000000</color>
 </resources>
