--- a/app/src/main/res/layout/fragment_community_main.xml
+++ b/app/src/main/res/layout/fragment_community_main.xml
@@ -52,8 +52,9 @@
                         android:id="@+id/community_search_reviewtitle"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:text="ReviewMe"
+                        android:text="@string/main_title"
                         android:gravity="center"
+                        android:textStyle="bold"
                         android:textColor="#fff"
                         android:textSize="18sp"
                         app:layout_constraintTop_toTopOf="parent"
@@ -64,21 +65,22 @@
                     <EditText
                         android:id="@+id/main_search_edit"
                         android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_marginStart="10dp"
+                        android:layout_height="33dp"
                         android:layout_marginBottom="10dp"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/btn_grey_border"
+                        android:inputType="text"
+                        android:paddingEnd="5dp"
+                        android:paddingStart="5dp"
                         android:textColor="#000"
                         android:textColorHint="#000"
-                        android:paddingStart="5dp"
-                        android:paddingEnd="5dp"
-                        app:layout_constraintEnd_toStartOf="@id/community_btn_cat"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/community_btn_cat"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/community_search_reviewtitle"
-                        android:inputType="text"
-                        android:background="@drawable/btn_grey_border"
                         tools:ignore="LabelFor"
                         />
+
 
 
                     <Button
