--- a/app/src/main/res/layout/fragment_review_main.xml
+++ b/app/src/main/res/layout/fragment_review_main.xml
@@ -55,7 +55,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:gravity="center"
-                        android:text="ReviewMe"
+                        android:textStyle="bold"
+                        android:text="@string/main_title"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +83,7 @@
                         tools:ignore="LabelFor"
                         />
 
-                    <TextView
+                    <ImageView
                         android:id="@+id/main_search_txt"
                         android:layout_width="50dp"
                         android:layout_height="0dp"
@@ -90,9 +91,7 @@
                         android:layout_marginEnd="10dp"
                         android:layout_marginStart="10dp"
                         android:gravity="center"
-                        android:text="검색"
-                        android:textColor="#000"
-                        android:textSize="13sp"
+                        android:src="@drawable/if_shop_search_1469731"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/main_search_edit"
