--- a/app/src/main/res/layout/item_review_main.xml
+++ b/app/src/main/res/layout/item_review_main.xml
@@ -63,19 +63,22 @@
             app:layout_constraintTop_toBottomOf="@id/review_main_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/review_main_id_img"
-            android:layout_marginBottom="15dp"
+            app:layout_constraintBottom_toTopOf="@id/main_review_img"
+            android:layout_marginBottom="5dp"
             tools:text="테스트 텍스트 ㅇㅇ"
             />
 
 
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="46dp"
+            android:layout_width="35dp"
+            android:layout_height="40dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toEndOf="parent"
+
             app:layout_constraintStart_toEndOf="@id/review_main_title"
             android:id="@+id/review_main_id_img"
+            android:layout_marginBottom="5dp"
             app:layout_constraintTop_toTopOf="parent"
             />
 
@@ -93,7 +96,7 @@
 
             android:layout_margin="10dp"
 
-            tools:src="@drawable/test2"
+            tools:src="@drawable/test_10"
             />
 
 
