데이터 캐싱 삭제

--- a/app/src/main/res/layout/item_community_main.xml
+++ b/app/src/main/res/layout/item_community_main.xml
@@ -17,12 +17,12 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="150dp"
         >
 
 
         <TextView
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:id="@+id/text_regi_name"
             android:text="@{item.name}"
             android:layout_width="150dp"
@@ -39,17 +39,35 @@
 
         <TextView
             android:text="@{item.text}"
-            android:layout_width="290dp"
+            android:layout_width="0dp"
             android:layout_height="40dp"
             android:textColor="@color/colorPrimaryDark"
-
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/txt_regi_title"
+            app:layout_constraintTop_toBottomOf="@id/text_regi_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/img_thumbnail"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+
             android:gravity="center_vertical"
             tools:text="여기 구나"
+            />
+
+        <TextView
+            android:id="@+id/txt_regi_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/txt_regi_title"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="8dp"
+            android:maxLines="2"
+            android:padding="5dp"
+            android:textColor="@color/black"
+            android:text="dddddddddddddddddddasdadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddaddddddddddddda"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
         <ImageView
@@ -59,7 +77,7 @@
             android:layout_height="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             app:CommunityMainImageUrl="@{item.image}"
             tools:ignore="UnusedAttribute"
