--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -56,6 +56,7 @@
             android:layout_height="35dp"
             android:paddingEnd="5dp"
             android:paddingStart="5dp"
+            android:inputType="text"
             app:layout_constraintBottom_toTopOf="@id/regist_edit_email"
             />
         <EditText
@@ -74,10 +75,14 @@
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:layout_height="35dp"
+            android:inputType="textEmailAddress"
             />
         <EditText
             android:id="@+id/regist_edit_age"
             android:hint="나이"
+            android:maxEms="2"
+            android:maxLength="2"
+            android:maxLines="1"
             android:paddingEnd="5dp"
             android:textColor="@color/black"
             android:paddingStart="5dp"
@@ -86,6 +91,7 @@
             android:background="@drawable/btn_grey_border"
             app:layout_constraintTop_toBottomOf="@id/regist_edit_email"
             android:layout_marginTop="20dp"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
@@ -114,7 +120,6 @@
             android:layout_marginStart="30dp"
             app:layout_constraintStart_toEndOf="@id/regist_txt_age"
             app:layout_constraintTop_toBottomOf="@id/regist_edit_age"
-
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:orientation="horizontal"
